# blog

./: .gitattributes  .gitignore  .vale.ini  CNAME  STRUCTURE.html  STRUCTURE.md  _quarto.yml  custom.scss  index.qmd  pyproject.toml  setup_blog.sh  sitemap.xml
.github/workflows/: deploy-dev.yml  deploy-prod.yml
_ci/: check_metadata.py  valid_categories.yml
_freeze/articles/blog-visual_generation/index/execute-results/: html.json
_freeze/articles/predict-next-word/index/execute-results/: html.json
articles/: _template_article.qmd  index.html  index.qmd
articles/blog-visual_generation/: index.qmd  requirements.txt
articles/predict-next-word/: index.html  index.qmd  pyproject.toml
notes/: 2026-05-06_scd_type2.qmd  _template_note.qmd  index.html  index.qmd
preprod/: STRUCTURE.html  index.html  listings.json  robots.txt  search.json  sitemap.xml
preprod/articles/: index.html  index.xml
preprod/articles/blog-visual_generation/: index.html
preprod/notes/: 2026-05-06_scd_type2.html  index.html
preprod/projets/: index.html
preprod/reviews/: index.html
preprod/site_libs/bootstrap/: bootstrap-22cdeb9ba0c8beb6944246e3c68521d6.min.css  bootstrap-64db80236a10e0b530cc2475bdc71de1.min.css  bootstrap-bdc8643c0e922cf983e7ab6a21cac5df.min.css
projets/: _template_projet.qmd  index.html  index.qmd
reviews/: _template_review.qmd  index.html  index.qmd
site_libs/bootstrap/: bootstrap-077dc7dac8c2dbd012b9247827b7102d.min.css
