[project]
name = "blog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Jupyter
    "jupyterlab>=4.0.0",
    "ipykernel>=6.5.0",
    # Data
    "numpy",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    # ML / HuggingFace
    "torch>=2.1.0",
    "diffusers>=0.37.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "optimum[openvino]>=1.17.0",
    "huggingface_hub>=0.21.0",
    "gradio_client>=2.5.0",
]
